--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "simple-body-validator": "^1.2.4"
   }
 }
