--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "serve": "ts-node app.ts",
+    "build": "tsc",
+    "start": "npm run build && node -r ts-node/register -r tsconfig-paths/register build/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.8",
-    "simple-body-validator": "^1.2.4"
+    "simple-body-validator": "^1.2.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/nodemailer": "^6.4.6",
+    "tsconfig-paths": "^4.1.0"
   }
 }
